chore(test): updated gatling rps workflow